tests/ui/pyclass_send.stderr
error[E0277]: `*mut c_void` cannot be shared between threads safely
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
  |
  = help: within `NotSyncNotSend`, the trait `Sync` is not implemented for `*mut c_void`
note: required because it appears within the type `NotSyncNotSend`
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^
note: required by a bound in `assert_pyclass_sync`
 --> src/impl_/pyclass/assertions.rs
  |
  | pub const fn assert_pyclass_sync<T>()
  |              ------------------- required by a bound in this function
  | where
  |     T: PyClassSync + Sync,
  |                      ^^^^ required by this bound in `assert_pyclass_sync`

error[E0277]: `*mut c_void` cannot be sent between threads safely
 --> tests/ui/pyclass_send.rs:4:1
  |
4 | #[pyclass]
  | ^^^^^^^^^^ `*mut c_void` cannot be sent between threads safely
  |
  = help: within `NotSyncNotSend`, the trait `Send` is not implemented for `*mut c_void`
  = help: the trait `pyo3::impl_::pyclass::PyClassThreadChecker<T>` is implemented for `SendablePyClass<T>`
note: required because it appears within the type `NotSyncNotSend`
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^
  = note: required for `SendablePyClass<NotSyncNotSend>` to implement `pyo3::impl_::pyclass::PyClassThreadChecker<NotSyncNotSend>`
note: required by a bound in `PyClassImpl::ThreadChecker`
 --> src/impl_/pyclass.rs
  |
  |     type ThreadChecker: PyClassThreadChecker<Self>;
  |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::ThreadChecker`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `*mut c_void` cannot be shared between threads safely
 --> tests/ui/pyclass_send.rs:8:8
  |
8 | struct SendNotSync(*mut c_void);
  |        ^^^^^^^^^^^ `*mut c_void` cannot be shared between threads safely
  |
  = help: within `SendNotSync`, the trait `Sync` is not implemented for `*mut c_void`
note: required because it appears within the type `SendNotSync`
 --> tests/ui/pyclass_send.rs:8:8
  |
8 | struct SendNotSync(*mut c_void);
  |        ^^^^^^^^^^^
note: required by a bound in `assert_pyclass_sync`
 --> src/impl_/pyclass/assertions.rs
  |
  | pub const fn assert_pyclass_sync<T>()
  |              ------------------- required by a bound in this function
  | where
  |     T: PyClassSync + Sync,
  |                      ^^^^ required by this bound in `assert_pyclass_sync`

error[E0277]: `*mut c_void` cannot be sent between threads safely
  --> tests/ui/pyclass_send.rs:11:1
   |
11 | #[pyclass]
   | ^^^^^^^^^^ `*mut c_void` cannot be sent between threads safely
   |
   = help: within `SyncNotSend`, the trait `Send` is not implemented for `*mut c_void`
   = help: the trait `pyo3::impl_::pyclass::PyClassThreadChecker<T>` is implemented for `SendablePyClass<T>`
note: required because it appears within the type `SyncNotSend`
  --> tests/ui/pyclass_send.rs:12:8
   |
12 | struct SyncNotSend(*mut c_void);
   |        ^^^^^^^^^^^
   = note: required for `SendablePyClass<SyncNotSend>` to implement `pyo3::impl_::pyclass::PyClassThreadChecker<SyncNotSend>`
note: required by a bound in `PyClassImpl::ThreadChecker`
  --> src/impl_/pyclass.rs
   |
   |     type ThreadChecker: PyClassThreadChecker<Self>;
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PyClassImpl::ThreadChecker`
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `*mut c_void` cannot be sent between threads safely
 --> tests/ui/pyclass_send.rs:4:1
  |
4 | #[pyclass]
  | ^^^^^^^^^^ `*mut c_void` cannot be sent between threads safely
  |
  = help: within `NotSyncNotSend`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `NotSyncNotSend`
 --> tests/ui/pyclass_send.rs:5:8
  |
5 | struct NotSyncNotSend(*mut c_void);
  |        ^^^^^^^^^^^^^^
note: required by a bound in `SendablePyClass`
 --> src/impl_/pyclass.rs
  |
  | pub struct SendablePyClass<T: Send>(PhantomData<T>);
  |                               ^^^^ required by this bound in `SendablePyClass`
  = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `*mut c_void` cannot be sent between threads safely
  --> tests/ui/pyclass_send.rs:11:1
   |
11 | #[pyclass]
   | ^^^^^^^^^^ `*mut c_void` cannot be sent between threads safely
   |
   = help: within `SyncNotSend`, the trait `Send` is not implemented for `*mut c_void`
note: required because it appears within the type `SyncNotSend`
  --> tests/ui/pyclass_send.rs:12:8
   |
12 | struct SyncNotSend(*mut c_void);
   |        ^^^^^^^^^^^
note: required by a bound in `SendablePyClass`
  --> src/impl_/pyclass.rs
   |
   | pub struct SendablePyClass<T: Send>(PhantomData<T>);
   |                               ^^^^ required by this bound in `SendablePyClass`
   = note: this error originates in the attribute macro `pyclass` (in Nightly builds, run with -Z macro-backtrace for more info)
